base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: hello-openshift
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
